wk_taa_taaqa/src/objects/CBI_Form__c.object
<CustomObject>
    <fields>
        <fullName>Tax_Competitor__c</fullName>
        <formula>TEXT( Opportunity__r.Account.Tax_Competitor__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tax Competitor Located on Account</inlineHelpText>
        <label>Tax Competitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Comments__c</fullName>
        <inlineHelpText>- What is the customers/prospects current technology environment?

Note: Product and Competitive Information from the Account will be pulled into the form automatically.</inlineHelpText>
        <label>Technology Comments</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_Cost_of_Ownership__c</fullName>
        <label>Total Cost of Ownership</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Types_of_Return_Currently_Filing__c</fullName>
        <inlineHelpText>specifically list the form numbers – the more the better</inlineHelpText>
        <label>Types of Return Currently Filing</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>User_and_office_count_roles_utilizing__c</fullName>
        <inlineHelpText>How many Employees would be utilizing?  What are their roles ( TB or WP only)? How many offices?</inlineHelpText>
        <label>User and office count, roles utilizing?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Users_needing_access_to_software__c</fullName>
        <inlineHelpText>How many users need access to the software?</inlineHelpText>
        <label>Users needing access to software?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Using_now_for_tax_and_fixed_assets__c</fullName>
        <inlineHelpText>What are you using for tax and fixed assets</inlineHelpText>
        <label>Using now for tax and fixed assets?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>What_are_our_blind_spots_Critical__c</fullName>
        <label>What are our blind spots? (Critical)</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>What_are_the_competition_s_strategies__c</fullName>
        <label>What are the competition’s strategies?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>What_are_your_retention_policies__c</fullName>
        <inlineHelpText>What are your retention policies?</inlineHelpText>
        <label>What are your retention policies?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>What_bad_thing_happens_if_they_do_not__c</fullName>
        <label>What “bad” thing happens if they do not</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>What_don_t_we_know__c</fullName>
        <label>What don’t we know?</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>What_is_the_buying_process__c</fullName>
        <label>What is the buying process?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Who_is_SAP_Microsoft_NetSuite_Partner__c</fullName>
        <label>Who is SAP/Microsoft/NetSuite Partner?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provide_current_workpaper_structure__c</fullName>
        <inlineHelpText>Could you provide us with a sample of your current workpaper structure (index structure)?</inlineHelpText>
        <label>provide current workpaper structure</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>state_calculations_being_maintained__c</fullName>
        <inlineHelpText>How many unique/discrete state deprecation calculations are you maintaining?</inlineHelpText>
        <label>state calculations being maintained?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <label>Solution Blueprint</label>
    <nameField>
        <displayFormat>SB-{00000}</displayFormat>
        <label>Solution Blueprint</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Blueprints</pluralLabel>
    <recordTypes>
        <fullName>Corporate_Direct</fullName>
        <active>true</active>
        <description>Use for Corporate Direct deals only</description>
        <label>Corporate Direct</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate_Indirect</fullName>
        <active>true</active>
        <description>Use for Corporate Indirect deals only</description>
        <label>Corporate Indirect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Blueprint</fullName>
        <active>true</active>
        <description>Used for R&amp;L and Professional Software deals</description>
        <label>Standard Blueprint</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Solution_Architect_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Presentation_Type__c, &quot;Presentation - SA Required&quot;) &amp;&amp;  Solution_Architect__c =&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Solution_Architect__c</errorDisplayField>
        <errorMessage>Solution Architect is required.</errorMessage>
    </validationRules>
</CustomObject>